# shrip

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
shrip/: __init__.py  __main__.py  archive.py  cli.py  ignore.py  upload.py
shrip/backends/: __init__.py  base.py  gofile.py  transfer_sh.py  zero_x0.py
tests/: test_archive.py  test_cli.py  test_ignore.py  test_upload.py
