[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shrip"
version = "0.1.0"
description = "Zip and share files from the terminal — no browser needed."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.scripts]
shrip = "shrip.cli:app"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock", "ruff"]

[tool.ruff]
target-version = "py39"
line-length = 100
